Olympus/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Account_Id_Back_Up__c</fullName>
        <label>Account Id Back Up</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Combination_Key__c</fullName>
        <description>This is used to query on Zip To Territory table.</description>
        <formula>MailingPostalCode+ Text(HSFE_Specialty__c)+ Text(HSFE_Sub_Specialty__c)</formula>
        <label>Combination Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Discipline__c</fullName>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thoracic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UR-GY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Website-CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Lists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courses/Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_City__c</fullName>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Country__c</fullName>
        <label>Other Country</label>
        <picklist>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_State_Provice__c</fullName>
        <label>Other State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Street__c</fullName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Zip_Postal_Code__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Primary_Text__c</fullName>
        <label>Primary Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Initiator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sales_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Origin__c</fullName>
        <label>Sub Origin</label>
        <picklist>
            <controllingField>HSFE_Origin__c</controllingField>
            <picklistValues>
                <fullName>Website SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Gyrus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AORN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoGastric Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE 160/180 Endoscope Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scopeguide Teaching Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <controllingField>HSFE_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoCapsule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>HSFE_Primary__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>HSFE_Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>HSFE_Primary__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSFE_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>HSFE_Primary__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>HSFE_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>